--- a/totvs/.project
+++ b/totvs/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>totvs</name>
+	<name>Skypass</name>
 	<comment></comment>
 	<projects>
 	</projects>
