--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
 
-  totvs-startech-postgres:
+  skypass-postgres:
     image: postgres:11.5-alpine
     restart: always
     environment:
@@ -18,7 +18,7 @@ services:
     volumes:
       - skypass-pg-data:/var/lib/postgresql
 
-  totvs-startech-pg-admin:
+  skypass-pg-admin:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: dev@skypass.com.br
